# ve-til-isy

./: .env.dist  .gitignore  Dockerfile  LICENCE  README.md  pyproject.toml
.github/: docker.yml
src/ve_til_isy/: __init__.py  __main__.py  hjelpere.py  sftp.py
src/ve_til_isy/sql/: hent_bilagsliste.sql  hent_fakturadokumenter.sql  hent_transaksjoner.sql
