[project]
name = "ve-til-isy"
version = "0.1.0"
description = "En integrasjon for å overføre regnskapsinfo fra Visma Enterprise Økonomisystem til ISY Prosjektøkonomi"
authors = [
    { name = "Erlend D. Handeland", email = "erlend.dietrich.handeland@stavanger.kommune.no" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "pymssql>=2.3.0",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "tomlkit>=0.13.0",
    "paramiko>=3.4.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/visma_isy"]
